--- a/Git/SpecialProject/SpecialProject/SpecialProject.csproj
+++ b/Git/SpecialProject/SpecialProject/SpecialProject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{751B5C47-36A4-4F21-AF3E-9688A6DE07A2}</ProjectGuid>
+    <ProjectGuid>{A1155401-5851-42D2-9372-0709447E9A9B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleGit</RootNamespace>
-    <AssemblyName>ConsoleGit</AssemblyName>
+    <RootNamespace>SpecialProject</RootNamespace>
+    <AssemblyName>SpecialProject</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
